
2012-08-30  Cedric Bail

	* Check the number of parameter for image in edc.

2012-09-04  Cedric Bail

	* Report type of file when listing file used by an edc.

2012-09-04  Jihoon Kim (jihoon)

	* Add EDJE_INPUT_PANEL_RETURN_KEY_TYPE_SIGNIN.

2012-09-04  Aharon Hillel

	* Added nested parts support.
	This lets us do nested parts, e.g parts "{ part { part { } } }"

2012-09-05  ChunEon Park (Hermet)

	* if user change image size of the image object which is swallowed and
	it's map enabled by the edje, then edje needs to update it's uv mapping
  	info.

2012-09-11  Cedric Bail

	* O(1) lookup used when searching Part_Lookup in edje_cc.
	* O(1) lookup when generating alias of group.
	* O(1) access time for parameters in edje_cc_handler.
	* Recycle and use less memory during load time.

2012-09-11  Carsten Haitzler (The Rasterman)

        * Improve memory footprint by cutting core edje real part
        struct down by less than half its size and making some parts allocated
        extra only if the type needs it.

2012-09-12  Cedric Bail

	* Small improvement in memory footprint by using an array instead of a list for
	some callback list.

2012-09-17  Cedric Bail

	* Don't generate an annotate file if edje_cc failed.

2012-09-17  Michael Bouchaud (yoz)

        * fix group inheritance on a group who have a script with global
        varable.
        * fix group inheritance on a group who have some programs uses script

2012-09-20  David Seikel (onefang)

	* Lua: Lua 5.2 support added.

2012-09-21  Flavio Ceolin

	* edje_codegen: added support for externals

2012-09-27  Michael Bouchaud (yoz)

        * fix scale_set in sub group

2012-09-27  Flavio Ceolin

	* edje_codegen: adding support for draggable

2012-10-10

	* edje_entry: Add more tags(preedit_sub1~4) for a variety of preediting states.

2012-10-21 Daniel Zaoui

	* Edje: change Edje to use Eo.
	This change adds Eo support to Edje while keeping the old API intact.
	For more information, go to Eo.